# GoGame-Core

./: .gitignore  LICENSE  README.md
cpp/: Board.cpp  Board.h  CMakeLists.txt  Config.h  GTP.h  Game.cpp  Game.h  GroupUtil.cpp  GroupUtil.h  Player.cpp  Player.h  config.cpp  config.h  gtp.cpp  gtp.h  main.cpp
cpp/gnugo/: CMakeLists.txt
cpp/gnugo/engine/: CMakeLists.txt
cpp/gnugo/interface/: CMakeLists.txt
cpp/gnugo/patterns/: CMakeLists.txt
cpp/gnugo/sgf/: CMakeLists.txt
cpp/gnugo/utils/: CMakeLists.txt
cpp/src/: Board.cpp  Board.h  Config.cpp  GTP.cpp  GTP.h  GroupUtil.cpp  GroupUtil.h  Player.cpp  SGFUtil.cpp  SGFUtil.h  config.json  main.cpp
